<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_list_symbol_image_size_entries"
        android:entryValues="@array/pref_list_symbol_image_size_values"
        android:key="list_symbol_image_size"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_list_symbol_image_size"
        android:dialogTitle="@string/pref_dialog_title_list_symbol_image_size"/>

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_list_button_size_entries"
        android:entryValues="@array/pref_list_button_size_values"
        android:key="list_button_size"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_button_size"
        android:dialogTitle="@string/pref_dialog_title_button_size"/>

    <SwitchPreference
        android:defaultValue="true"
        android:title="@string/pref_title_admin_mode"
        android:key="admin_mode_switch"
        android:summary="@string/pref_summary_admin_mode" />

</PreferenceScreen>
