<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_text_to_speech_entries"
        android:entryValues="@array/pref_list_text_to_speech_values"
        android:key="list_text_to_speech"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_list_text_to_speech"
        android:dialogTitle="@string/pref_dialog_title_list_text_to_speech"/>

    <ListPreference
        android:defaultValue="-1"
        android:dialogTitle="@string/pref_dialog_title_list_text_to_speech_delay_time"
        android:entries="@array/pref_list_text_to_speech_delay_time_entries"
        android:entryValues="@array/pref_list_text_to_speech_delay_time_values"
        android:key="list_text_to_speech_delay_time"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_list_text_to_speech_delay_time" />

</PreferenceScreen>
